fix(items): fixed item creation documentation
